--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Dependencies maintained by OCCRP
 banal==1.0.6
-followthemoney==3.5.8
+# followthemoney==3.5.8
+followthemoney @ git+https://github.com/investigativedata/followthemoney.git@schema/science-identifiers
 followthemoney-store[postgresql]==3.0.6
 followthemoney-compare==0.4.4
 fingerprints==1.2.3
