--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Dependencies maintained by OCCRP
 banal==1.0.6
-followthemoney==3.7.4
 followthemoney-store[postgresql]==3.1.0
+# followthemoney==3.5.8
+followthemoney @ git+https://github.com/investigativedata/followthemoney.git@schema/science-identifiers
 followthemoney-compare==0.4.4
 fingerprints==1.2.3
 servicelayer[google,amazon]==1.22.2
